--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "start": "live-server --port=3000 --open=/index.html",
     "dev": "live-server --port=3000 --open=/index.html --watch=.",
     "serve": "http-server -p 8080 -o",
+    "express": "node app.js",
+    "server": "nodemon app.js",
     "build": "echo 'Building project...' && echo 'Project is ready for deployment!'",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -14,7 +16,14 @@
     "type": "git",
     "url": "git+https://github.com/hoban1598/WP-5.git"
   },
-  "keywords": ["game", "web", "javascript", "html5", "canvas", "education"],
+  "keywords": [
+    "game",
+    "web",
+    "javascript",
+    "html5",
+    "canvas",
+    "education"
+  ],
   "author": "Team WP-5",
   "license": "ISC",
   "bugs": {
@@ -26,5 +35,9 @@
     "http-server": "^14.1.1",
     "live-server": "^1.2.2",
     "nodemon": "^3.1.10"
+  },
+  "dependencies": {
+    "express": "^5.1.0",
+    "serve-static": "^2.2.0"
   }
 }
